# Triangles_3D

./: .gitignore  CMakeLists.txt  README.md
include/: aabb.hpp  bvh.hpp  bvh_node.hpp  bvh_visualizer.hpp  constants.hpp  details.hpp  indexed_triangle.hpp  node.hpp  point.hpp  point_3d.hpp  segment.hpp  triangle.hpp  vector.hpp  vector_3d.hpp
src/: aabb.cc  bvh.cc  main.cc  point.cc  point_3d.cc  segment.cc  triangle.cc  vector.cc  vector_3d.cc
src/app/: parse_input.hpp
src/dump/: bvh_visualizer.hpp
src/geometry/: aabb.hpp  point.hpp  segment.hpp  triangle.hpp  vector.hpp
src/geometry/acceleration/: bvh.hpp  indexed_triangle.hpp  node.hpp
tests/: CMakeLists.txt  test_aabb.cc  test_bvh.cc  test_segment.cc  test_triangle.cc  test_vector.cc
tests/e2e/: run_e2e_testing.py
tests/e2e/reference/: fcl_reference.hpp  get_answers.py  main.cc
tests/e2e/test_data/: 1.ans  10.ans  2.ans  3.ans  4.ans  5.ans  6.ans  7.ans  8.ans  9.ans
tests/e2e/test_execution/: main.cc
tests/e2e/test_generation/: generator.hpp  main.cc
tests/gtest/: test_aabb.cc  test_bvh.cc  test_node.cc  test_point.cc  test_segment.cc  test_triangle.cc  test_vector.cc
